# rinha-q1-2024-fastapi

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
db/: init_rinha.sql
src/: main.py  models.py
